--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "scripts": {
         "test": "node test.js"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "http-auth": "3.2.3",
+        "pug": "2.0.0-rc.4"
+    }
 }
